// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render correctly with default props 1`] = `
<nav
  class="rdt_pagination rdt_Pagination"
>
  <span
    class="rdt_paginationRowLabel"
  >
    Rows per page:
  </span>
  <div
    class="rdt_selectWrapper"
  >
    <select
      aria-label="Rows per page:"
      class="rdt_selectControl"
    >
      <option
        selected=""
        value="10"
      >
        10
      </option>
      <option
        value="15"
      >
        15
      </option>
      <option
        value="20"
      >
        20
      </option>
      <option
        value="25"
      >
        25
      </option>
      <option
        value="30"
      >
        30
      </option>
    </select>
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
    </svg>
  </div>
  <span
    class="rdt_paginationRange"
  >
    1-10 of 40
  </span>
  <div
    class="rdt_paginationPageList"
  >
    <button
      aria-disabled="true"
      aria-label="First Page"
      class="rdt_paginationButton"
      disabled=""
      id="pagination-first-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
        />
        <path
          d="M24 24H0V0h24v24z"
          fill="none"
        />
      </svg>
    </button>
    <button
      aria-disabled="true"
      aria-label="Previous Page"
      class="rdt_paginationButton"
      disabled=""
      id="pagination-previous-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Next Page"
      class="rdt_paginationButton"
      id="pagination-next-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Last Page"
      class="rdt_paginationButton"
      id="pagination-last-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </button>
  </div>
</nav>
`;

exports[`when the screensize is small > paginationComponentOption noRowsPerPage should be respected 1`] = `
<nav
  class="rdt_pagination rdt_Pagination"
>
  <div
    class="rdt_paginationPageList"
  >
    <button
      aria-disabled="true"
      aria-label="First Page"
      class="rdt_paginationButton"
      disabled=""
      id="pagination-first-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
        />
        <path
          d="M24 24H0V0h24v24z"
          fill="none"
        />
      </svg>
    </button>
    <button
      aria-disabled="true"
      aria-label="Previous Page"
      class="rdt_paginationButton"
      disabled=""
      id="pagination-previous-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Next Page"
      class="rdt_paginationButton"
      id="pagination-next-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
        />
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Last Page"
      class="rdt_paginationButton"
      id="pagination-last-page"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
        />
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
      </svg>
    </button>
  </div>
</nav>
`;
